<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <include layout="@layout/custom_toolbar"></include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_toolbar_head"
        android:layout_above="@+id/bootom_navbar">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <!--First section copy for all remaining-->
            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:baselineAligned="false">
                <LinearLayout
                    android:id="@+id/first_item"
                    android:layout_width="0dp"
                    android:layout_height="220dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_allside">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_height_forimg"
                        android:background="@drawable/shape_item">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/facebook"
                            android:layout_gravity="center"
                            android:padding="@dimen/padding_allside"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="start"
                        android:layout_margin="@dimen/home_space_bt_img_ll">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/facebook"
                            android:layout_margin="2dp"
                            android:textSize="@dimen/text_heading"
                            android:textColor="@color/black_700"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_140"
                            android:layout_margin="2dp"
                            android:textSize="@dimen/text_subheading"
                            android:textColor="@color/gray_400"

                            />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginEnd="@dimen/margin_end"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_height_forimg"
                        android:background="@drawable/shape_item">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/facebook"
                            android:layout_gravity="center"
                            android:padding="@dimen/padding_allside"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="start"
                        android:layout_marginTop="@dimen/home_space_bt_img_ll"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/facebook"
                            android:layout_margin="2dp"
                            android:textSize="@dimen/text_heading"
                            android:textColor="@color/black_700"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_140"
                            android:layout_margin="2dp"
                            android:textSize="@dimen/text_subheading"
                            android:textColor="@color/gray_400"

                            />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_below="@id/linear1"
                android:baselineAligned="false"
                >
                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_allside">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_height_forimg"
                        android:background="@drawable/shape_item">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/facebook"
                            android:layout_gravity="center"
                            android:padding="@dimen/padding_allside"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="start"
                        android:layout_margin="@dimen/home_space_bt_img_ll"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/facebook"
                            android:layout_margin="2dp"
                            android:textSize="@dimen/text_heading"
                            android:textColor="@color/black_700"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_140"
                            android:layout_margin="2dp"
                            android:textSize="@dimen/text_subheading"
                            android:textColor="@color/gray_400"

                            />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginEnd="@dimen/margin_end"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_height_forimg"
                        android:background="@drawable/shape_item">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/facebook"
                            android:layout_gravity="center"
                            android:padding="@dimen/padding_allside"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="start"
                        android:layout_margin="@dimen/home_space_bt_img_ll"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/facebook"
                            android:layout_margin="2dp"
                            android:textSize="@dimen/text_heading"
                            android:textColor="@color/black_700"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_140"
                            android:layout_margin="2dp"
                            android:textSize="@dimen/text_subheading"
                            android:textColor="@color/gray_400"

                            />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_below="@id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:baselineAligned="false"

                >
                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/margin_allside">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_height_forimg"
                        android:background="@drawable/shape_item">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/facebook"
                            android:layout_gravity="center"
                            android:padding="@dimen/padding_allside"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="start"
                        android:layout_margin="@dimen/home_space_bt_img_ll"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/facebook"
                            android:layout_margin="2dp"
                            android:textSize="@dimen/text_heading"
                            android:textColor="@color/black_700"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_140"
                            android:layout_margin="2dp"
                            android:textSize="@dimen/text_subheading"
                            android:textColor="@color/gray_400"

                            />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginEnd="@dimen/margin_end"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_height_forimg"
                        android:background="@drawable/shape_item">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/facebook"
                            android:layout_gravity="center"
                            android:padding="@dimen/padding_allside"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="start"
                        android:layout_margin="@dimen/home_space_bt_img_ll"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/facebook"
                            android:layout_margin="2dp"
                            android:textSize="@dimen/text_heading"
                            android:textColor="@color/black_700"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_140"
                            android:layout_margin="2dp"
                            android:textSize="@dimen/text_subheading"
                            android:textColor="@color/gray_400"

                            />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>




        </RelativeLayout>
    </ScrollView>

    <!--Bottom Navigation started-->

    <LinearLayout
        android:id="@+id/bootom_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        android:background="@color/white_color"
        android:baselineAligned="false"
        >
        <LinearLayout
            android:id="@+id/linear_home_fav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/padding_allside"
            android:onClick="navFav"

            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favorite_border_black_24dp"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorities"
                android:textSize="@dimen/bottom_navbar_text_size"
                android:textColor="@color/black_color"
                android:gravity="center"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear_home_explore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/padding_allside"
            android:onClick="navExplore"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_home_black_24dp"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explore"
                android:textSize="@dimen/bottom_navbar_text_size"
                android:textColor="@color/black_color"
                android:gravity="center"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear_home_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/padding_allside"
            android:onClick="navSettting"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_settings_black_24dp"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:textSize="@dimen/bottom_navbar_text_size"
                android:textColor="@color/black_color"
                android:gravity="center"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>